United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 7082645 Hotspot doesn't compile on old linuxes after 7060836
7082645 : Hotspot doesn't compile on old linuxes after 7060836

Details
Type:
Bug
Submit Date:
2011-08-23
Status:
Closed
Updated Date:
2011-10-07
Project Name:
JDK
Resolved Date:
2011-09-30
Component:
hotspot
OS:
linux
Sub-Component:
gc
CPU:
generic
Priority:
P5
Resolution:
Fixed
Affected Versions:
hs22
Fixed Versions:
hs22

Related Reports
Backport:
Backport:
Relates:

Sub Tasks

Description
Compilation failes because of lack of syscall ids definitions and also because of the conflict of definitions of timespec-related structures.

In file included from /usr/include/asm-x86_64/vsyscall.h:4,
                 from /usr/include/asm/vsyscall.h:4,
                 from /tmp/jprt/P1/010954.coleenp/source/src/os/linux/vm/os_linux.cpp:129:
/usr/include/linux/time.h:9: redefinition of `struct timespec'
/usr/include/time.h:107: previous definition of `struct timespec'
/usr/include/linux/time.h:88: redefinition of `struct timeval'
/usr/include/bits/time.h:68: previous definition of `struct timeval'
/usr/include/linux/time.h:93: redefinition of `struct timezone'
/usr/include/sys/time.h:57: previous definition of `struct timezone'
/usr/include/linux/time.h:119: redefinition of `struct itimerspec'
/usr/include/time.h:143: previous definition of `struct itimerspec'
/usr/include/linux/time.h:124: redefinition of `struct itimerval'
/usr/include/sys/time.h:108: previous definition of `struct itimerval'
/tmp/jprt/P1/010954.coleenp/source/src/os/linux/vm/os_linux.cpp: In static 
   member function `static int os::Linux::sched_getcpu_syscall()':
/tmp/jprt/P1/010954.coleenp/source/src/os/linux/vm/os_linux.cpp:2594: `
   __NR_vgetcpu' undeclared (first use this function)
/tmp/jprt/P1/010954.coleenp/source/src/os/linux/vm/os_linux.cpp:2594: (Each 
   undeclared identifier is reported only once for each function it appears 
   in.)

                                    

Comments
EVALUATION

See main CR
                                     
2011-09-14
EVALUATION

http://hg.openjdk.java.net/hsx/hotspot-gc/hotspot/rev/9447b2fb6fcf
                                     
2011-08-30



Hardware and Software, Engineered to Work Together