7082645: Hotspot doesn't compile on old linuxes after 7060836

Move syscall ids definitions into os_linux.cpp

Reviewed-by: johnc